[gd_scene load_steps=16 format=3 uid="uid://bbal7dy0fqtxa"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_xf4s3"]
[ext_resource type="Shader" path="res://shader/psx_camera_shader.gdshader" id="2_32gk2"]
[ext_resource type="Texture2D" uid="uid://bbtf74jipq8sf" path="res://icons/crosshairs_tilesheet_white@2.png" id="2_56o22"]
[ext_resource type="Script" path="res://scripts/context_component.gd" id="3_btdrp"]
[ext_resource type="PackedScene" uid="uid://drsmiusak0bud" path="res://models/assets/Flashlight01/Flashlight01.glb" id="3_virgw"]
[ext_resource type="Script" path="res://scripts/flashlight.gd" id="4_0b5se"]
[ext_resource type="Texture2D" uid="uid://dpxl6gl3ic0l1" path="res://icons/Keyboard & Mouse/Default/keyboard_e.png" id="4_n1vfi"]
[ext_resource type="FontFile" uid="uid://dpgyfwitoblt7" path="res://fonts/XTypewriter-Regular.ttf" id="4_rbcv6"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hq2fm"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3ydod"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jk4qa"]
render_priority = 0
shader = ExtResource("2_32gk2")
shader_parameter/enable_fog = true
shader_parameter/fog_color = null
shader_parameter/noise_color = null
shader_parameter/fog_distance = 100.0
shader_parameter/fog_fade_range = 50.0
shader_parameter/enable_noise = true
shader_parameter/noise_time_fac = 4.0
shader_parameter/enable_color_limitation = true
shader_parameter/color_levels = 32
shader_parameter/enable_dithering = true
shader_parameter/dither_strength = 0.3

[sub_resource type="QuadMesh" id="QuadMesh_bldmp"]
material = SubResource("ShaderMaterial_jk4qa")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_5thqf"]
size = Vector3(0.126404, 0.272217, 0.111313)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tafn"]
atlas = ExtResource("2_56o22")
region = Rect2(60, 60, 8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_jll0e"]
font = ExtResource("4_rbcv6")
font_size = 18
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0.117647, 0.117647, 0.117647, 0.243137)
shadow_offset = Vector2(-1, 1)

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_xf4s3")

[node name="mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_hq2fm")

[node name="coll" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_3ydod")

[node name="camera_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.088338, 0.411788, 0)

[node name="camera" type="Camera3D" parent="camera_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00162363, 0.136338, -0.374264)

[node name="raycast" type="RayCast3D" parent="camera_pivot/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0555006, 0.0216231, 0.205075)
target_position = Vector3(0, 0, -3)
collide_with_areas = true
debug_shape_thickness = 5

[node name="MeshInstance3D" type="MeshInstance3D" parent="camera_pivot/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.132185)
visible = false
mesh = SubResource("QuadMesh_bldmp")

[node name="Flashlight" parent="camera_pivot/camera" instance=ExtResource("3_virgw")]
transform = Transform3D(1.3, 0, 0, 0, -0.336465, -1.2557, 0, 1.2557, -0.336465, 0.296246, -0.175111, -0.443969)
collision_layer = 0
collision_mask = 0
script = ExtResource("4_0b5se")

[node name="CollisionShape3D" type="CollisionShape3D" parent="camera_pivot/camera/Flashlight"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, -0.0050354, 0.130738, -0.0199203)
shape = SubResource("BoxShape3D_5thqf")

[node name="flashlight_light" type="SpotLight3D" parent="camera_pivot/camera/Flashlight"]
transform = Transform3D(1, 0, 0, 0, -0.16787, 0.985809, 0, -0.985809, -0.16787, 0, 0, 0)
light_energy = 2.443
light_indirect_energy = 2.19
light_volumetric_fog_energy = 1.132
light_size = 0.099
spot_range = 38.832
spot_attenuation = 1.45
spot_angle = 60.77
spot_angle_attenuation = 0.554785

[node name="HUD" type="Control" parent="camera_pivot"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="reticle" type="CenterContainer" parent="camera_pivot/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="camera_pivot/HUD/reticle"]
layout_mode = 2
texture = SubResource("AtlasTexture_5tafn")

[node name="interact_text" type="CenterContainer" parent="camera_pivot/HUD"]
clip_contents = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="camera_pivot/HUD/interact_text"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="camera_pivot/HUD/interact_text/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
texture = ExtResource("4_n1vfi")
expand_mode = 1
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="camera_pivot/HUD/interact_text/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="camera_pivot/HUD/interact_text/HBoxContainer/CenterContainer"]
layout_mode = 2
text = "Lorem Ipsum"
label_settings = SubResource("LabelSettings_jll0e")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ContextComponent" type="Node" parent="camera_pivot/HUD" node_paths=PackedStringArray("icon", "context")]
script = ExtResource("3_btdrp")
icon = NodePath("../interact_text/HBoxContainer/TextureRect")
context = NodePath("../interact_text/HBoxContainer/CenterContainer/Label")
default_icon = ExtResource("4_n1vfi")

[node name="CenterContainer" type="CenterContainer" parent="camera_pivot/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0

[node name="stamina_bar" type="ProgressBar" parent="camera_pivot/HUD/CenterContainer"]
modulate = Color(0.764706, 0.619608, 0.145098, 1)
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
value = 100.0
rounded = true
show_percentage = false
